Added notifications
