# nest/libs/features/notifications/src/dtos/mark-notifications-seen.dto.ts
@@ -1,0 +1,7 @@
+import { IsNotEmpty, IsArray } from 'class-validator';
+
+export class MarkNotificationsSeen {
+  @IsArray()
+  @IsNotEmpty()
+  ids: string[];
+}
